--- a/views/todo/index.erb
+++ b/views/todo/index.erb
@@ -1,11 +1,38 @@
+<table class="table table-bordered">
+<div class="control-group">
+  <a href="/todos/new" class="btn btn-primary">Add todo item</a>
+</div>
+     <thead>
+        <tr>
+            <th>Id</th>
+            <th>Todo item</th>
+            <th>Created</th>
+            <th>Completed</th>
+            <th>Done</th>
+            <th>Actions</th>
+        </tr>
+     </thead>
+     <tbody>
+      <% @todos.each do |todo| %>
+        <tr>
+          <td><%= todo[:id] %></td>
+          <td><%= todo[:done] ? "<del>#{todo[:content]}</del>" : todo[:content] %></td>
+          <td><%= prettify_date(todo[:created_at]) %></td>
+          <td><%= prettify_date(todo[:completed_at]) %></td>
+          <td>
+            <% if todo[:done] %>
+              <span class="label label-success">Completed</span>
+            <% else %>
+              <span class="label label-warning">Pending</span>
+            <% end %>
+          </td>
+          <td><a href="/todos/edit/<%= todo[:id] %>" class="btn btn-danger">Edit</a>
+              <a href="/todos/delete/<%= todo[:id] %>" class="btn btn-danger">Delete</a>
+          </td>              
+        </tr>
+      <% end %>
+     </tbody>
+</table>
 
-<h1>To do application</h1>
-<ul>
-<% @todos.each do |todo| %>
-  <li>
-    <h2><a href="/todos/<%= todo.id %>"><%= todo.content %></a>
-    <span><%= todo.created_at %></span>
-    </h2>
-  </li>
-<% end %>
-</ul> 
+  
+  
